force-app/main/default/objects/Register_Entry_Line__c/Register_Entry_Line__c.object-meta.xml
<CustomObject>
    <label>Register Entry Line</label>
    <nameField>
        <displayFormat>REL-{YYYY}-{MM}-{000000}</displayFormat>
        <label>Register Entry Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Register Entry Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>