force-app/main/default/objects/Register_Entry_Line__c/fields/Bank_Register__c.field-meta.xml
<CustomField>
    <fullName>Bank_Register__c</fullName>
    <label>Bank Register</label>
    <referenceTo>Bank_Register__c</referenceTo>
    <relationshipLabel>Register Entry Lines</relationshipLabel>
    <relationshipName>Register_Entry_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>