force-app/main/default/objects/Register_Entry_Line__c/fields/Bill_Pay__c.field-meta.xml
<CustomField>
    <fullName>Bill_Pay__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill Pay</label>
    <referenceTo>Bill_Pay__c</referenceTo>
    <relationshipLabel>Register Entry Lines</relationshipLabel>
    <relationshipName>Register_Entry_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>