force-app/main/default/objects/Register_Entry_Line__c/fields/Changes_Made_after_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Changes_Made_after_Reconciliation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>ALERT : Something changed in Payment receipts after reconciliation.</inlineHelpText>
    <label>Changes Made after Reconciliation</label>
    <type>Checkbox</type>
</CustomField>