force-app/main/default/objects/Register_Entry_Line__c/fields/Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Entry_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Entry Date</label>
    <type>Date</type>
</CustomField>