force-app/main/default/objects/Register_Entry_Line__c/fields/Entry_Memo__c.field-meta.xml
<CustomField>
    <fullName>Entry_Memo__c</fullName>
    <label>Entry Memo</label>
    <type>TextArea</type>
</CustomField>