force-app/main/default/objects/Register_Entry_Line__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Register Entry Lines</relationshipLabel>
    <relationshipName>Register_Entry_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>