force-app/main/default/objects/Register_Entry_Line__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee or Payor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Register Entry Lines</relationshipLabel>
    <relationshipName>Register_Entry_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>