force-app/main/default/objects/Register_Entry_Line__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>