force-app/main/default/objects/Register_Entry_Line__c/fields/Related_Payment__c.field-meta.xml
<CustomField>
    <fullName>Related_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Payment</label>
    <referenceTo>Receive_Payment__c</referenceTo>
    <relationshipLabel>Register Entry Lines</relationshipLabel>
    <relationshipName>Register_Entry_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>