force-app/main/default/objects/Register_Entry_Line__c/fields/Running_Balance__c.field-meta.xml
<CustomField>
    <fullName>Running_Balance__c</fullName>
    <formula>( Debit_Amount__c + Credit_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Running Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>