force-app/main/default/objects/Register_Entry_Line__c/fields/Supplier_Bill__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Bill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Bill</label>
    <referenceTo>Supplier_Bill__c</referenceTo>
    <relationshipLabel>Register Entry Lines</relationshipLabel>
    <relationshipName>Register_Entry_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>