force-app/main/default/objects/Register_Entry_Line__c/fields/Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Amount__c</fullName>
    <formula>( Debit_Amount__c - Credit_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>