force-app/main/default/objects/Register_Entry_Line__c/recordTypes/Adjustment.recordType-meta.xml
<RecordType>
    <fullName>Adjustment</fullName>
    <active>true</active>
    <label>Adjustment</label>
</RecordType>