force-app/main/default/objects/Register_Entry_Line__c/recordTypes/Credit.recordType-meta.xml
<RecordType>
    <fullName>Credit</fullName>
    <active>true</active>
    <label>Credit</label>
</RecordType>