force-app/main/default/objects/Register_Entry_Line__c/recordTypes/Debit.recordType-meta.xml
<RecordType>
    <fullName>Debit</fullName>
    <active>true</active>
    <label>Debit</label>
</RecordType>