force-app/main/default/objects/Register_Entry_Line__c/validationRules/Validate_Reconciled.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Reconciled</fullName>
    <active>true</active>
    <errorConditionFormula>Reconciled__c   &amp;&amp;  Chart_of_Account__c  = null</errorConditionFormula>
    <errorDisplayField>Chart_of_Account__c</errorDisplayField>
    <errorMessage>Please select Chart of Accounts for reconciliation</errorMessage>
</ValidationRule>